--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bardoqi/ImageSplitter",
+    "name": "bardoqi/Image-splitter",
     "description": "Split large images into m x n equal-sized small pieces.",
     "type": "library",
     "keywords": [
